--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <a class="nav-link" href="#problem">Problem</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#howToUse">How To Use</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#feature">Features</a>
                 </li>
                 <li class="nav-item">
@@ -64,7 +67,7 @@
                 </section>
 
                 <section>
-                    <h2 id="feature" class="navbar-offset display-4 section-title">Features</h2>
+                    <h2 id="howToUse" class="navbar-offset display-4 section-title">How to use</h2>
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p class="col-12 col-sm-6 col-md-7 feature-text">
@@ -92,6 +95,44 @@
                             <img class="img-fluid" src="images/use-case-3.png">
                         </div>
                     </div>
+                </section>
+
+                <section>
+                  <h2 id="feature" class="navbar-offset display-4 section-title">Feature</h2>
+                  <!-- <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    <img class="card-img-bottom" src="images/card-1.jpg" alt="Card image cap">
+                  </div> -->
+                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/card-1.jpg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/card-2.jpg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/card-3.jpg" alt="Third slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
                 </section>
 
                 <section>
