--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117518649-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117518649-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,7 +19,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
-
+    <link rel="stylesheet" href="styles/animate.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <title>Thefood</title>
 </head>
 
@@ -31,6 +42,9 @@
                     <a class="nav-link" href="#feature">Features</a>
                 </li>
                 <li class="nav-item">
+                        <a class="nav-link" href="#bonus">Bonus</a>
+                    </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#price">Pricing</a>
                 </li>
 
@@ -47,8 +61,12 @@
         <div id="banner-fg" class="d-flex flex-column  justify-content-between">
             <div></div>
             <div>
+                <div class="wow flip">
                 <h1 class="display-4 banner-text"><span class="title-first">THE</span> food</h1>
+                </div>
+                <div class="wow fadeIn">
                 <h2 class="lead banner-text">A easier way to eat.</h2>
+                </div>
                 <br>
                 <a class="btn btn-lg clickButton" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw">&nbsp;&nbsp;Get Notified When Available</a>
             </div>
@@ -62,19 +80,26 @@
         <div class="row justify-content-center">
             <div class="col col-lg-8">
                 <section>
+                    <div class="wow bounceInLeft">
                     <h2 id="problem" class="display-4 navbar-offset section-title">Problem</h2><br>
-                    <p class="feature-text">想像剛上完一堂很硬的課<br><br>走到學餐發現<br><br><span class="logo-first" style="font-size:2.5rem">雞</span><span class="logo-last" style="font-size:2.5rem">掰</span><br><br>人怎麼這麼多<br><br>有沒有更簡便的取餐方式?</p>
+                    </div>
+                    <p class="feature-text">想像好不容易上完一堂課<br><br>走到學餐卻發現<br><br><span class="logo-first" style="font-size:2.5rem">雞</span><span class="logo-last" style="font-size:2.5rem">掰！</span><br><br>人怎麼這麼多<br><br>那我們有沒有更簡便的取餐方式?</p>
                 </section>
 
                 <section>
-                    <h2 id="howToUse" class="navbar-offset display-4 section-title">How to use</h2>
-
+                        <div class="wow wobble">
+                                <div class="wow bounceInDown">
+                                    <h2 id="howToUse" class="navbar-offset display-4 section-title">How to use</h2>
+                                </div>
+                            </div>
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p class="col-12 col-sm-6 col-md-7 feature-text">
                             step 1:<br><br>打開<span class="logo-first">&nbsp;The</span><span class="logo-last">Food</span>，預定餐點。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
+                            <div class="wow swing">
                             <img class="img-fluid" src="images/use-case-1.png">
+                            </div>
                         </div>
                     </div>
 
@@ -83,7 +108,9 @@
                             STEP 2:<br><br>店家收到訂單後，餐點提前製作。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
+                            <div class="wow jello">
                             <img class="img-fluid" src="images/use-case-2.png">
+                            </div>
                         </div>
                     </div>
 
@@ -92,51 +119,52 @@
                             STEP 3:<br><br>下課後無須拉扯或推擠，立即享用美味餐點。
                         </p>
                         <div class="col-8 col-sm-6 col-md-6">
+                            <div class="wow tada">
                             <img class="img-fluid" src="images/use-case-3.png">
+                            </div>
                         </div>
                     </div>
                 </section>
 
                 <section>
+                        <div class="wow bounceInLeft">
                   <h2 id="feature" class="navbar-offset display-4 section-title">Feature</h2>
-                  <!-- <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    <img class="card-img-bottom" src="images/card-1.jpg" alt="Card image cap">
-                  </div> -->
-                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/card-1.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/card-2.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/card-3.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
+                        </div>
+                  <div class="card-group">
+                     <div class="card">
+                         <img class="img-fluid card-img-top" src="images/card-1.jpg">
+                         <div class="card-block">
+                             <h4 class="card-title">提前訂餐</h4>
+                         </div>
+                     </div>
+                     <div class="card">
+                         <img class="img-fluid card-img-top" src="images/card-2.jpg" alt="Card image cap">
+                         <div class="card-block">
+                             <h4 class="card-title">為店家評分</h4>
+                         </div>
+                     </div>
+                     <div class="card">
+                         <img class="img-fluid card-img-top" src="images/card-3.jpg" alt="Card image cap">
+                         <div class="card-block">
+                             <h4 class="card-title">定時領取優惠餐卷</h4>
+                         </div>
+                     </div>
+                 </div>
                 </section>
+            <section>
+                    <div class="wow bounceInLeft">
+                    <h2 id="bonus" class="navbar-offset display-4 section-title">Bonus</h2>
+                    </div>
+                        <p>
+                            我們還會定期舉辦免費餐點抽獎！<br>只要將你們用餐過後的心得回饋給店家5次<br>即可享有抽獎機會！<br>
+                        </p>
+                        <img class="img-fluid" src="images/lottery.png" width="30%">
+            </section>
 
                 <section>
+                        <div class="wow bounceInLeft">
                     <h2 id="price" class="navbar-offset display-4 section-title">Pricing</h2>
+                    </div>
                     <p class='price-text'><span class='logo-first'>永久</span><span class="logo-last">免費</span></p>
                     <p style="color:white">Please help us improve by taking a 30sec survey. Your feedback is highly appreciated.</p>
                     <br>
@@ -147,17 +175,68 @@
     </div>
 
     <footer id="footer" class=".navbar-offset">
-        <section>
-            <h2 class="text-center">About</h2>
-        </section>
-        <p class="text-center">We are students who believe can make the world a little bit better by writing good software.</p>
-    </footer>
+            <section>
+              <h2 class="text-center footer-contact_us">Contact us</h2>
+
+              <div class="d-flex row flex-lg-row  justify-content-lg-left">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                  <img class="rounded-circle" src="./images/johnny.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Johnny <a href="https://www.facebook.com/xiao.ban.52"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                  </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                    <img class="rounded-circle" src="./images/tommy.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Tommy <a href="https://www.facebook.com/profile.php?id=100000513222512"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                  </div>
+                  <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                    <img class="rounded-circle" src="./images/yu_fong.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Yu-fong  <a href="https://www.facebook.com/yufong.lin.39?fref=ts"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                  <img class="rounded-circle" src="./images/yi_hsuan.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Yi-hsuan <a href="https://www.facebook.com/mao.anny"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                  <img class="rounded-circle" src="images\fa_you.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Fa-You<a href="https://www.facebook.com/fred.chen.7528"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                  <img class="rounded-circle" src="./images/howard.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Tzu-Hao <a href="https://www.facebook.com/profile.php?id=100002595552069"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3">
+                  <img class="rounded-circle" src="./images/tammy_su.jpg" alt="Generic placeholder image" width="110" height="110">
+                  <div class="card-block">
+                    <p class="card-title">Tammy-Su <a href="https://www.facebook.com/tammy.su.946?ref=br_rs"><i class="fab fa-facebook-square"></i></a></p>
+                  </div>
+                </div>
+              </div>
+                <h2 class="text-center footer-about">About</h2>
+            </section>
+            <p class="text-center">We are students who believe can make the world a little bit better by writing good software.</p>
+        </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
     <script src="scripts/main.js"></script>
+    <script src="scripts/dist/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
