--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                 <h2 class="lead banner-text">A easier way to eat.</h2>
                 </div>
                 <br>
-                <a class="btn btn-lg clickButton" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw">&nbsp;&nbsp;Get Notified When Available</a>
+                <a class="btn btn-lg clickButton"
+                    onclick="ga(‘send’, ‘social’, ‘事件目錄’, ‘事件動作’, ‘事件標籤’);"
+                    target="_blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw">
+                >&nbsp;&nbsp;Get Notified When Available</a>
+                <!--a class="btn btn-lg clickButton" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw">&nbsp;&nbsp;Get Notified When Available</a-->
             </div>
             <h2 class="banner-text">
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
