--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-117518649-1');
-      ga('create', 'UA-XXXXXXX-X', 'auto');
+      ga('create', 'UA-XXXXX-Y', 'auto');
       ga('require', 'linkid', 'linkid.js');  //加強連結歸屬標記
       ga('require', 'displayfeatures');  //客層和興趣報表標記
+      ga('send', 'pageview');
 
     </script>
 
