--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <br>
                 <a class="btn btn-lg clickButton" target="_blank" onclick="ga('send', 'event', 'button', 'click', 'button_click');"
-                  href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw">
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSftUc6QLCQJ6gHFmx6JU11D6iPDJV6VgAQau79haHDO5eCglg/viewform">
                 >&nbsp;&nbsp;Get Notified When Available</a>
                 <!--a class="btn btn-lg clickButton" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw">&nbsp;&nbsp;Get Notified When Available</a-->
             </div>
@@ -176,7 +176,7 @@
                     <p class='price-text'><span class='logo-first'>永久</span><span class="logo-last">免費</span></p>
                     <p style="color:white">Please help us improve by taking a 30sec survey. Your feedback is highly appreciated.</p>
                     <br>
-                    <a class="btn btn-lg clickButton" <a class="btn btn-lg clickButton" target="_blank" onclick="ga('send', 'event', 'button', 'click', 'button_click');" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2F1N6YQoOjCMPMpu0V2c4juvYedi6XglJmUwAoFeWQYO7Y%2Fedit&h=ATOoAQtFdW251nebwBCZuCAfcp2Nd_klNZDCSDUQ0_EnZ2loZT0k5oQS52T5hVNB1tDAudnpCM4bFh6KIOz5O01dOFwGaSyEnf990PH93jvtu_a_lLJYrw" ><i class="fa fa-thumbs-up" aria-hidden="true"></i>&nbsp;&nbsp;Ok, I'd Like to Help</a>
+                    <a class="btn btn-lg clickButton" <a class="btn btn-lg clickButton" target="_blank" onclick="ga('send', 'event', 'button', 'click', 'button_click');" href="https://docs.google.com/forms/d/e/1FAIpQLSftUc6QLCQJ6gHFmx6JU11D6iPDJV6VgAQau79haHDO5eCglg/viewform" ><i class="fa fa-thumbs-up" aria-hidden="true"></i>&nbsp;&nbsp;Ok, I'd Like to Help</a>
                 </section>
             </div>
         </div>
